--- a/.env
+++ b/.env
@@ -16,5 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=0058629f96035094d235e54b06b56b05
+APP_SECRET=
 ###< symfony/framework-bundle ###
+
+ISS_LOCATION_CACHE_TTL=5
